adding location to old recipes

--- a/_site.yml
+++ b/_site.yml
@@ -8,6 +8,8 @@ navbar:
   right:
     - text: "Home"
       href: index.html
+    - text: "Old Recipes"
+      href: https://github.com/rmflight/recipes/tree/main/old_recipes
     - text: "Welcome"
       href: posts/welcome/index.html
     - icon: fa fa-rss
